use printf to display command line used.