@@ -1,3 +1,3 @@
 #!/usr/bin/env bash
 jlink --module-path $JAVA_HOME/jmods:mlib --add-modules printer --output dist/printerapp
-echo "printerapp created."
+echo "jlink --module-path $JAVA_HOME/jmods:mlib --add-modules printer --output dist/printerapp"
